--- a/views/components/header.ejs
+++ b/views/components/header.ejs
@@ -3,6 +3,7 @@
 </head>
 <header>
     <nav>
+        <a href="/home">📚 BookStore</a>
         <ul>
             <li><a href="/home">Home</a></li>
             <li><a href="/books">Books</a></li>
